--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,12 +1,3 @@
-<html>
-<!-- <script type="text/javascript">
-	// Prevent dropdown menu from closing when click inside the form
-	$(document).on("click", ".navbar-right .dropdown-menu", function(e){
-		e.stopPropagation();
-	});
-</script> -->
-<!-- </head> -->
-
 <body>
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
@@ -65,7 +56,7 @@
 <br />
 
 <div class="container">
-	<div class="card mb-3" style="max-width: 600px">
+	<div class="card mb-10">
 	  <div class="row no-gutters">
   	  <div class="col-md-10">
     	  <div class="card-body">
@@ -81,5 +72,30 @@
     	  <img class="card-img" style="height:250px; width:70px; margin:10px" src=<%= @beer.image %> alt="...">
   	  </div>
 	  </div>
+
+	   <div class="row no-gutters">
+	   	<div class= "col-md-12">
+	   		<div class= "reviews">
+	   			<h1> Reviews </h1>
+	   			<%= render @beer.reviews %>
+	   			<div>
+	   				<%= link_to "Add Reviews", new_beer_review_path(@beer), class:"btn-custom" %>
+	   			</div>
+	   			<div>
+	   		</div>
+	   </div>
+	 </div>
+	</div>
+
 	</div>
 </div>
+
+<script>
+	$('.review-rating').raty({
+		readOnly: true,
+		score: function() {
+			return $(this).attr('data-score');
+		},
+		path: '/assets/'
+	});
+</script>
