--- a/app/views/ipa/index.html.erb
+++ b/app/views/ipa/index.html.erb
@@ -33,13 +33,13 @@
 				</ul>
 			</li>
 		</ul>
-
+<!--
 			<form class="navbar-form form-inline">
 				<div class="input-group search-box">
 					<input type="text" id="search" class="form-control" placeholder="Search here...">
 					<span class="input-group-addon"><i class="material-icons"></i></span>
 				</div>
-			</form>
+			</form> -->
 
 			<ul class="nav navbar-nav navbar-right ml-auto">
 					<% if user_signed_in? %>
